# AndoSim

./: .gitignore  AUDIT_ACTION_ITEMS.md  AUDIT_SUMMARY.md  BLENDER_GUIDE.md  BLENDER_INSTALLATION.md  BLENDER_INTEGRATION_PROGRESS.md  BLENDER_QUICK_START.md  BUG_FIXES_SUMMARY.md  BUILD.md  BUILD_SUCCESS.md  CACHED_IMPLEMENTATION_SUMMARY.md  CACHED_SIMULATION_USAGE.md  CHANGELOG.md  CI_CD_COMPLETE.md  CI_CD_GUIDE.md  CMakeLists.txt  COLLISION_VALIDATION_SUMMARY.md  COMPLETE_SUMMARY.md  DEMO_FIXES_REPORT.md  DEMO_QUICK_REFERENCE.md  DEMO_STATUS.md  DEMO_SYSTEM_COMPLETE.md  HIGH_IMPACT_IMPROVEMENTS.md  HIGH_IMPACT_TASKS_REPORT.md  INTEGRATOR_COMPLETION_REPORT.md  INTEGRATOR_FIX_SUMMARY.md  KEYBOARD_CONTROLS_FIX.md  KEYBOARD_DEBUG_LOG.md  LINE_SEARCH_FAQ.md  MILESTONE_ROADMAP.md  PHASE2_STATUS_REPORT.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE4_CORE_COMPLETE_OLD.md  PHASE4_PLAN.md  PHASE4_PROGRESS.md  PHASE_1_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT.md  (+20 more)
_codeql_build_dir/: CTestTestfile.cmake  Makefile
blender_addon/: __init__.py  _core_loader.py  ando_barrier_core.py  blender_manifest.toml  operators.py  parameter_update.py  ppf_adapter.py  properties.py  ui.py  visualization.py
demos/: CMakeLists.txt  README.md  demo_cascading_curtains.py  demo_cloth_drape.cpp  demo_cloth_wall.cpp  demo_flag_wave.py  demo_framework.py  demo_simple_fall.cpp  demo_utils.h  test_keys.py  test_keys_simple.py  (+1 more)
tests/: CMakeLists.txt  test_adaptive_timestep.py  test_barrier_derivatives.cpp  test_basic.cpp  test_e2e.py  test_heatmap_colors.py
(+38 files in other folders)
